<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Powerstats -->
    <string name="intelligence">Intelligence:</string>
    <string name="Strength">Strength:</string>
    <string name="power">Power:</string>
    <string name="durability">Durability:</string>
    <string name="speed">Speed:</string>
    <string name="combat">Combat:</string>
    <!-- Appearance -->
    <string name="eyecolor">Eye Color:</string>
    <string name="race">Race:</string>
    <string name="haircolor">Hair Color:</string>
    <string name="gender">Gender:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>

</resources>