<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bar"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Magneto"
        app:titleTextColor="@color/textColorPrimary" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivSuperheroImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImageViewShape"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.cardview.widget.CardView
                android:id="@+id/biographyCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tvBiography"
                        style="@style/SuperheroText.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="BIOGRAPHY"
                        android:textColor="@color/black"/>

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="?android:attr/listDivider"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="@color/cardview_light_background" />

                    <TextView
                        android:id="@+id/tvFullName"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Full Name:"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tvAliases"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Aliases:"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvFirstAppearance"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_height="wrap_content"
                        android:text="First Appearance:"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tvAlignment"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Alignment:"
                        android:textColor="@color/black"/>"

                    <TextView
                        android:id="@+id/tvGroup"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Group Affiliation:"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tvRelatives"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Relatives:"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/powerstatsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tvPowerStats"
                        style="@style/SuperheroText.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="POWER STATS"
                        android:textColor="@color/black"/>

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="?android:attr/listDivider"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="@color/cardview_light_background" />

                    <TextView
                        android:id="@+id/tvIntelligence"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intelligence"
                        android:textColor="@color/black"/>

                    <ProgressBar
                        android:id="@+id/pbIntelligence"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="false"
                        android:max="100"
                        android:minWidth="200dp"
                        android:minHeight="50dp"
                        android:progress="0"
                        android:progressBackgroundTint="@android:color/darker_gray"
                        android:progressTint="@color/red" />

                    <TextView
                        android:id="@+id/tvStrength"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Strength"
                        android:textColor="@color/black"/>

                    <ProgressBar
                        android:id="@+id/pbStrength"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="false"
                        android:progress="0"
                        android:max="100"
                        android:minHeight="50dp"
                        android:minWidth="200dp"
                        android:progressBackgroundTint="@android:color/darker_gray"
                        android:progressTint="@color/red" />

                    <TextView
                        android:id="@+id/tvSpeed"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textColor="@color/black"/>

                    <ProgressBar
                        android:id="@+id/pbSpeed"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="false"
                        android:progress="0"
                        android:max="100"
                        android:minHeight="50dp"
                        android:minWidth="200dp"
                        android:progressBackgroundTint="@android:color/darker_gray"
                        android:progressTint="@color/red" />
                    <TextView
                        android:id="@+id/tvDurability"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/durability"
                        android:textColor="@color/black"/>

                    <ProgressBar
                        android:id="@+id/pbDurability"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="false"
                        android:progress="0"
                        android:max="100"
                        android:minHeight="50dp"
                        android:minWidth="200dp"
                        android:progressBackgroundTint="@android:color/darker_gray"
                        android:progressTint="@color/red" />

                    <TextView
                        android:id="@+id/tvPower"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/power"
                        android:textColor="@color/black" />

                    <ProgressBar
                        android:id="@+id/pbPower"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="false"
                        android:progress="0"
                        android:max="100"
                        android:minHeight="50dp"
                        android:minWidth="200dp"
                        android:progressBackgroundTint="@android:color/darker_gray"
                        android:progressTint="@color/red" />



                    <TextView
                        android:id="@+id/tvCombat"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/combat"
                        android:textColor="@color/black"/>

                    <ProgressBar
                        android:id="@+id/pbCombat"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="false"
                        android:progress="0"
                        android:max="100"
                        android:minHeight="50dp"
                        android:minWidth="200dp"
                        android:progressBackgroundTint="@android:color/darker_gray"
                        android:progressTint="@color/red" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/appearanceCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tvAppearance"
                        style="@style/SuperheroText.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="APPEARANCE"
                        android:textColor="@color/black"/>
                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?android:attr/listDivider"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="@color/cardview_light_background" />

                    <TextView
                        android:id="@+id/tvGender"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/gender"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tvRace"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/race"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tvHeight"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/height"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tvWeight"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/weight"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tvEyeColor"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/eyecolor"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tvHairColor"
                        style="@style/SuperheroText.Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/haircolor"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/publisherCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">
                <TextView
                    android:id="@+id/tvpublisher"
                    style="@style/SuperheroText.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Publisher :"
                    android:textColor="@color/black"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>